k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fcs-engine
  labels:
    name: fcs-engine
